--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Cairo is a 2D graphics library with support for multiple output
 devices. Currently supported output targets include the X Window
 System (via both Xlib and XCB), quartz, win32, and image buffers,
 as well as PDF, PostScript, and SVG file output. Experimental backends
-include OpenGL, OS/2, and DirectFB.
+include OpenGL and DirectFB.
 
 Cairo is designed to produce consistent output on all output media
 while taking advantage of display hardware acceleration when available
@@ -166,15 +166,6 @@ Font backends (required to have at least one)
 	    parts of cairo and pixman, and so should be avoided. MSVC
 	    7.1 or later, including the free Microsoft Visual Studio
 	    Express editions, produce correct code.
-
-Experimental surface backends
------------------------------
-	os2 backend
-	-----------
-	Cairo should run on any recent version of OS/2 or eComStation, but it
-	requires a font backend. See the freetype dependency list. Ready to use
-	packages and developer dependencies are available at Netlabs:
-				ftp://ftp.netlabs.org/pub/cairo
 
 
 Compiling
